--- a/charts/standard-app/templates/http-secrets.yaml
+++ b/charts/standard-app/templates/http-secrets.yaml
@@ -1,16 +1,18 @@
+{{- if .Values.secret }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.secretName }}
+  name: {{ .Values.secret.secretName | default .Chart.Name | quote }}
   labels:
     app: app
     chart: '{{ .Chart.Name }}-{{ .Chart.Version }}'
     release: '{{ .Release.Name }}'
     heritage: '{{ .Release.Service }}'
-type: {{ .Values.secretType }}
+type: {{ .Values.secret.secretType | default Opaque | quote }}
 data:
 {{- range $name, $value := .Values.secrets }}
 {{- if not (empty $value) }}
    {{ $name }}: {{ $value | quote }}
 {{- end}}
+{{- end }}
 {{- end }}
