--- a/charts/standard-app/templates/http-secrets.yaml
+++ b/charts/standard-app/templates/http-secrets.yaml
@@ -8,7 +8,7 @@ metadata:
     chart: '{{ .Chart.Name }}-{{ .Chart.Version }}'
     release: '{{ .Release.Name }}'
     heritage: '{{ .Release.Service }}'
-type: {{ .Values.secret.secretType | default Opaque | quote }}
+type: {{ .Values.secret.secretType | default Opaque }}
 data:
 {{- range $name, $value := .Values.secrets }}
 {{- if not (empty $value) }}
