--- a/charts/standard-app/templates/http-secrets.yaml
+++ b/charts/standard-app/templates/http-secrets.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.secret.secretName | default .Chart.Name | quote }}
+  name: {{ .Values.secret.secretName | default .Release.Name | quote }}
   labels:
     app: app
     chart: '{{ .Chart.Name }}-{{ .Chart.Version }}'
