--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -15,20 +15,27 @@ jobs:
       - name: Set up Helm
         uses: azure/setup-helm@v1
 
+      - name: Get Chart Version
+        id: chart_version
+        run: echo "::set-output name=version::$(grep version charts/standard-app/Chart.yaml | awk '{print $2}')"
+
       - name: Package Helm Chart
-        run: helm package charts/standard-app
+        run: |
+          chart_version=${{ steps.chart_version.outputs.version }}
+          helm package charts/standard-app --version ${chart_version} -d packaged
+          mv packaged/*.tgz packaged/standard-app-${chart_version}.tgz
 
       - name: Update Helm Repository Index
-        run: helm repo index --url https://julinux-io.github.io/standard-app/charts/standard-app charts/standard-app
+        run: helm repo index packaged --url https://julinux-io.github.io/standard-app/charts/standard-app
 
-      - name: mv index for /
-        run: mv charts/standard-app/index.yaml .
+      - name: Move Index to Root
+        run: mv packaged/index.yaml .
 
       - name: Commit and Push Changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add packaged/ && git commit -m "Update Helm repository"
+          git add packaged/ index.yaml && git commit -m "Update Helm repository"
           git push origin standard-app
 
       - name: Update Tag
@@ -40,6 +47,6 @@ jobs:
           tag_name: v${{ github.run_number }}
           release_name: Release v${{ github.run_number }}
           body: |
-            update tag.
+            Update tag.
           draft: false
           prerelease: false
