--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -18,30 +18,24 @@ jobs:
 
       - name: Get Current Chart Version
         id: current_version
-        run: |
-          version_line=$(grep version charts/standard-app/Chart.yaml)
-          echo "::set-output name=version::$(echo $version_line | awk '{print $2}')"
+        run: echo "::set-output name=version::$(awk '/version:/ {print $2}' charts/standard-app/Chart.yaml)"
 
-      - name: Bump Chart Version
-        id: bump_version
+      - name: Increment Version
+        id: increment_version
         run: |
           current_version=${{ steps.current_version.outputs.version }}
-          new_version=$(echo $current_version | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g')
+          IFS='.' read -r -a version_parts <<< "$current_version"
+          ((version_parts[${#version_parts[@]} - 1]++))
+          new_version="${version_parts[0]}"
+          for ((i = 1; i < ${#version_parts[@]}; i++)); do
+            new_version="${new_version}.${version_parts[i]}"
+          done
           echo "::set-output name=new_version::$new_version"
 
       - name: Update Chart Version in Chart.yaml
-        run: sed -i "s/version: ${{ steps.current_version.outputs.version }}/version: ${{ steps.bump_version.outputs.new_version }}/" charts/standard-app/Chart.yaml
-
-      - name: Package Helm Chart
         run: |
-          new_version=${{ steps.bump_version.outputs.new_version }}
-          helm package charts/standard-app --version $new_version -d packaged
-
-      - name: Update Helm Repository Index
-        run: helm repo index packaged --url https://julinux-io.github.io/standard-app/charts/standard-app
-
-      - name: Move Index to Root
-        run: mv packaged/index.yaml .
+          new_version=${{ steps.increment_version.outputs.new_version }}
+          sed -i "s/version: ${{ steps.current_version.outputs.version }}/version: $new_version/" charts/standard-app/Chart.yaml
 
       - name: Commit and Push Changes
         run: |
