--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -16,26 +16,15 @@ jobs:
       - name: Set up Helm
         uses: azure/setup-helm@v1
 
+      - name: Chart Package
+        run: helm package charts/standard-app && mv *.tgz charts/standard-app
+
+      - name: Create/Update index's chart
+        run: helm repo index --url https://julinux-io.github.io/standard-app/charts/standard-app charts/standard-app && mv charts/standard-app/index.yaml .
+
       - name: Get Current Chart Version
         id: current_version
-        run: echo "::set-output name=version::$(awk '/version:/ {print $2}' charts/standard-app/Chart.yaml)"
-
-      - name: Increment Version
-        id: increment_version
-        run: |
-          current_version=${{ steps.current_version.outputs.version }}
-          IFS='.' read -r -a version_parts <<< "$current_version"
-          ((version_parts[${#version_parts[@]} - 1]++))
-          new_version="${version_parts[0]}"
-          for ((i = 1; i < ${#version_parts[@]}; i++)); do
-            new_version="${new_version}.${version_parts[i]}"
-          done
-          echo "::set-output name=new_version::$new_version"
-
-      - name: Update Chart Version in Chart.yaml
-        run: |
-          new_version=${{ steps.increment_version.outputs.new_version }}
-          sed -i "s/version: ${{ steps.current_version.outputs.version }}/version: $new_version/" charts/standard-app/Chart.yaml
+        run: echo "$(awk '/version:/ {print $2}' charts/standard-app/Chart.yaml)"
 
       - name: Commit and Push Changes
         run: |
