--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -33,8 +33,17 @@ jobs:
           git add packaged/ charts/standard-app/Chart.yaml index.yaml && git commit -m "Update Helm repository"
           git push origin standard-app
 
+  update_tag:
+    runs-on: ubuntu-latest
+    needs: [release]
+    steps:
+      - name: Check Workflow Changes
+        id: check_changes
+        run: echo "${{ github.event.head_commit.modified }}"
+
       - name: Update Tag
         id: update_tag
+        if: contains(steps.check_changes.outputs.result, '.github/workflows/standard-app.yml') == false
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
