--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -48,7 +48,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ steps.bump_version.outputs.new_version }}
+          tag_name: v${{ steps.bump_version.outputs.new_version }} # Exemplo: v2.0.0
           release_name: Release v${{ steps.bump_version.outputs.new_version }}
           body: |
             Update tag.
