--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -42,9 +42,15 @@ jobs:
         run: echo "${{ github.event.head_commit.modified }}"
 
       - name: Update Tag
+        id: update_tag
         if: contains(steps.check_changes.outputs.result, '.github/workflows/standard-app.yml') == false
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ steps.current_version.outputs.version }} # Use a versão atual do Chart.yaml
+          release_name: Release v${{ steps.current_version.outputs.version }}
+          body: |
+            Update tag.
           draft: false
           prerelease: false
