--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -16,6 +16,27 @@ jobs:
       - name: Set up Helm
         uses: azure/setup-helm@v1
 
+      - name: Get Current Chart Version
+        id: current_version
+        run: echo "$(awk '/version:/ {print $2}' charts/standard-app/Chart.yaml)"
+
+      - name: Increment Version
+        id: increment_version
+        run: |
+          current_version=${{ steps.current_version.outputs.result }}
+          IFS='.' read -r -a version_parts <<< "$current_version"
+          ((version_parts[${#version_parts[@]} - 1]++))
+          new_version="${version_parts[0]}"
+          for ((i = 1; i < ${#version_parts[@]}; i++)); do
+            new_version="${new_version}.${version_parts[i]}"
+          done
+          echo "::set-output name=new_version::$new_version"
+
+      - name: Update Version in Chart.yaml
+        run: |
+          new_version=${{ steps.increment_version.outputs.new_version }}
+          sed -i "s/version: ${{ steps.current_version.outputs.result }}/version: $new_version/" charts/standard-app/Chart.yaml
+
       - name: Chart Package
         run: helm package charts/standard-app && mv *.tgz charts/standard-app
 
