--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -1,4 +1,4 @@
-name: Release Charts
+name: Helm Chart Release
 
 on:
   push:
@@ -8,21 +8,39 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
 
-      - name: Configure Git
-        run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-
-      - name: Install Helm
+      - name: Set up Helm
         uses: azure/setup-helm@v1
 
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.2.0
+      - name: Chart Package
+        run: helm package charts/standard-app && mv *.tgz charts/standard-app
+
+      - name: Create/Update index's chart
+        run: helm repo index --url https://julinux-io.github.io/standard-app/charts/standard-app charts/standard-app && mv charts/standard-app/index.yaml .
+
+      - name: Get Current Chart Version
+        id: current_version
+        run: echo "$(awk '/version:/ {print $2}' charts/standard-app/Chart.yaml)"
+
+      - name: Commit and Push Changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add packaged/ charts/standard-app/Chart.yaml index.yaml && git commit -m "Update Helm repository"
+          git push origin standard-app
+      - name: Update Tag
+        id: update_tag
+        uses: actions/create-release@v1
         env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ steps.bump_version.outputs.new_version }}
+          release_name: Release v${{ steps.bump_version.outputs.new_version }}
+          body: |
+            Update tag.
+          draft: false
+          prerelease: false
