--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -37,7 +37,7 @@ jobs:
           sed "s/version:.*/version: $new_version/" charts/standard-app/Chart.yaml > tmpfile && mv tmpfile charts/standard-app/Chart.yaml
 
       - name: Chart Package
-        run: helm package charhts/standard-app && mv *.tgz charts/standard-app
+        run: helm package charts/standard-app && mv *.tgz charts/standard-app
 
       - name: Create/Update index's chart
         run: helm repo index --url https://julinux-io.github.io/standard-app/charts/standard-app charts/standard-app && mv charts/standard-app/index.yaml .
