--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -21,23 +21,24 @@ jobs:
         run: |
           current_version=$(awk '/version:/ {print $2}' charts/standard-app/Chart.yaml)
           increment_version="0.1.0"
-          IFS='.' read current_parts <<< "$current_version"
-          IFS='.' read increment_parts <<< "$increment_version"
+          IFS='.' read -ra current_parts <<< "$current_version"
+          IFS='.' read -ra increment_parts <<< "$increment_version"
 
-          first=$((current_parts[1] + increment_parts[1]))
-          second=$((current_parts[3] + increment_parts[3]))
-          third=$((current_parts[5] + increment_parts[5]))
+          first=$((current_parts[0] + increment_parts[0]))
+          second=$((current_parts[1] + increment_parts[1]))
+          third=$((current_parts[2] + increment_parts[2]))
 
-          export new_version="$first.$second.$third"
+          new_version="$first.$second.$third"
           echo $new_version
 
-          sed "s/version:.*/version: $new_version/" charts/standard-app/Chart.yaml > tmpfile && mv tmpfile charts/standard-app/Chart.yaml
+          sed "s/version:.*/version: $new_version/" charts/standard-app/Chart.yaml > tmpfile
+          mv tmpfile charts/standard-app/Chart.yaml
           cat charts/standard-app/Chart.yaml
 
       - name: Chart Package
         run: |
           helm package charts/standard-app 
-          mv *.tgz charts/standard-app
+          mv standard-app-$new_version.tgz charts/standard-app
 
       - name: Create/Update index's chart
         run: |
