--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -49,7 +49,8 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add packaged/ charts/standard-app/Chart.yaml index.yaml && git commit -m "Update Helm repository"
+          git add .
+          git commit -m "Update Helm repository"
           git push origin standard-app
 
   # tag_update:
