add if in workflow

--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -2,8 +2,8 @@ name: Helm Chart Release
 
 on:
   push:
-    branches:
-      - standard-app
+    paths-ignore: [".github/standard-app/standard-app.yml"]
+    branches: ["standard-app"]
 
 jobs:
   release:
