--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -49,7 +49,9 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git status
           git add .
+          git status
           git commit -m "Update Helm repository"
           git push origin standard-app
 
