--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -3,7 +3,7 @@ name: Helm Chart Release
 on:
   push:
     paths-ignore:
-      - "*standard-app.yml"
+      - ".github/workflows"
     branches:
       - "standard-app"
 
