--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -53,6 +53,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git status
           git add .
           git status
           git commit -m "Update Helm repository"
