--- a/charts/standard-app/values.yaml
+++ b/charts/standard-app/values.yaml
@@ -13,7 +13,7 @@ app:
     repository: "nhds/agent-territory-management"
     tag: "latest"
   imagePullSecrets:
-    enabled: true
+    enabled: false
 
   logRoot: ""
   workingDir: ""
