--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -53,12 +53,12 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git status
-          git switch index
+          git checkout index
           git add '*.tgz'
           git add index.yaml
           git commit -m "add tgz and index.yaml in branch index"
           git push origin index
-          git switch standard-app
+          git checkout standard-app
           git add .
           git commit -m "Update Helm repository"
           git push origin standard-app
