--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -48,11 +48,15 @@ jobs:
           helm repo index --url https://julinux-io.github.io/standard-app/charts/standard-app charts/standard-app 
           mv charts/standard-app/index.yaml .
 
-      - name: Commit and Push Index and tgz
+      - name: Configure Git
         run: |
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
           git config --global push.default simple
+
+      - name: Commit and Push Index and tgz
+        run: |
+          git checkout index
           git add '*.tgz'
           git add index.yaml
           git commit -m "Add tgz and index.yaml in branch index"
@@ -60,9 +64,6 @@ jobs:
 
       - name: Commit and Push Chart
         run: |
-          git config --global user.email "action@github.com"
-          git config --global user.name "GitHub Action"
-          git config --global push.default simple
           git checkout standard-app
           git add .
           git commit -m "Update Helm repository"
