--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Commit and Push Index and tgz
         run: |
+          git branch index
           git checkout index
           git add '*.tgz'
           git add index.yaml
