--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -28,14 +28,9 @@ jobs:
           first=$((current_parts[0] + increment_parts[0]))
           second=$((current_parts[1] + increment_parts[1]))
           third=$((current_parts[2] + increment_parts[2]))
-          echo $first
-          echo $second
-          echo $third
           new_version="$first.$second.$third"
-          echo $new_version
 
-          sed "s/version:.*/version: $new_version/" charts/standard-app/Chart.yaml > tmpfile
-          mv tmpfile charts/standard-app/Chart.yaml
+          sed -i "s/version:.*/version: $new_version/" charts/standard-app/Chart.yaml
           cat charts/standard-app/Chart.yaml
 
       - name: Configure Git
@@ -62,25 +57,8 @@ jobs:
 
       - name: Commit and Push Index and tgz
         run: |
-          git symbolic-ref HEAD refs/heads/index
+          git checkout refs/heads/index
           git add '*.tgz'
           git add index.yaml
           git commit -m "Add tgz and index.yaml in branch index!"
-          git push origin index
-
-  # tag_update:
-  #   runs-on: ubuntu-latest
-  #   needs: release
-  #   steps:
-  #     - name: Update Tag
-  #       id: update_tag
-  #       uses: actions/create-release@v1
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       with:
-  #         tag_name: v${{ steps.bump_version.outputs.new_version }}
-  #         release_name: Release v${{ steps.bump_version.outputs.new_version }}
-  #         body: |x
-  #           Update tag.
-  #         draft: false
-  #         prerelease: false
+          git push origin HEAD:index
