--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -1,64 +1,33 @@
-name: Helm Chart Release
+name: release-chart
 
 on:
   push:
-    paths-ignore:
-      - ".github/workflows/*"
     branches:
-      - "standard-app"
+      - master
 
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up Helm
-        uses: azure/setup-helm@v1
-
-      - name: Update Chart Version
-        id: update_version
-        run: |
-          current_version=$(awk '/version:/ {print $2}' charts/standard-app/Chart.yaml)
-          increment_version="0.1.0"
-          IFS='.' read -ra current_parts <<< "$current_version"
-          IFS='.' read -ra increment_parts <<< "$increment_version"
-
-          first=$((current_parts[0] + increment_parts[0]))
-          second=$((current_parts[1] + increment_parts[1]))
-          third=$((current_parts[2] + increment_parts[2]))
-          new_version="$first.$second.$third"
-
-          sed -i "s/version:.*/version: $new_version/" charts/standard-app/Chart.yaml
-          cat charts/standard-app/Chart.yaml
+      - name: Fetch history
+        run: git fetch --prune --unshallow
 
       - name: Configure Git
         run: |
-          git config --global user.email "action@github.com"
-          git config --global user.name "GitHub Action"
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-      - name: Commit and Push Chart
-        run: |
-          git checkout standard-app
-          git add .
-          git commit -m "Update Helm repository"
-          git push origin standard-app
+      - name: Install Helm
+        uses: azure/setup-helm@v1
+        with:
+          version: v3.5.2
 
-      - name: Chart Package
-        run: |
-          helm package charts/standard-app 
-          mv *.tgz charts/standard-app
-
-      - name: Create/Update index's chart
-        run: |
-          helm repo index --url https://julinux-io.github.io/standard-app/charts/standard-app charts/standard-app 
-          mv charts/standard-app/index.yaml .
-
-      - name: Commit and Push Index and tgz
-        run: |
-          git checkout refs/heads/index
-          git add '*.tgz'
-          git add index.yaml
-          git commit -m "Add tgz and index.yaml in branch index!"
-          git push origin HEAD:index
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.2.0
+        with:
+          charts_repo_url: https://docs.getunleash.io/helm-charts
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
