--- a/.github/workflows/standard-app.yml
+++ b/.github/workflows/standard-app.yml
@@ -1,22 +1,18 @@
-name: Helm Chart Release
+name: Release Charts
 
 on:
   push:
-    paths-ignore:
-      - ".github/workflows/*"
     branches:
-      - "main"
+      - main
 
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Helm
-        uses: azure/setup-helm@v1
-
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Configure Git
         run: |
